--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,6 @@
 /******* Bootstrap Theming ********/
 
-$primary: #FF4800;
+$primary: #142ffd;
 $secondary: #F2F2F4;
 $light: #FFFFFF;
 $dark: #1F1F2E;
@@ -122,7 +122,7 @@ p,
 }
 
 .jumbotron {
-    background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(../img/header.jpg);
+    background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(../img/header.avif);
     background-position: top;
     background-repeat: no-repeat;
     background-size: cover;
