--- a/css/style.css
+++ b/css/style.css
@@ -8145,3 +8145,11 @@ i {
       font-size: 20px;
   }
 }
+p{
+    font-family: Changa, sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    padding-top: 10px;
+    color:#000
+}
